...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/homeFragment"
    android:background="@color/Blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ivNavbarTop"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnCatatanTransaksi"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/white_button"
                    android:contentDescription="Catatan Transaksi"
                    android:onClick="btnCatatanTransaksi"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnCatatanHutang"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/white_button"
                    android:contentDescription="Catatan Hutang"
                    android:onClick="btnCatatanHutang"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnStokBarang"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/white_button"
                    android:contentDescription="Stok Barang"
                    android:onClick="btnStokBarang"
...
