<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileFragment"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNavbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/btnUnduhLaporan"
                    android:onClick="btnUnduhLaporan"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/download"
                    app:tint="@color/black"
                    android:background="@drawable/white_edit_text_borderless"/>
...
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/kanan" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:onClick="btnExit">

...
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/kanan" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dummy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:onClick="btnExit">

...
