<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calenderFragment"
    tools:context=".ui.calender.CalenderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clNavbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/Blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/tvCalender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Calender"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:onClick="btnJatuhTempo"
                    android:id="@+id/btnJatuhTempo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/jatuh_tempo_icon"
                    android:background="@color/Blue"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:tint="@color/white" />



            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/clNavbar"
                android:paddingTop="20dp"
                android:background="@color/light_blue">

                <LinearLayout
                    android:id="@+id/llTanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvTanggal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="1"
                        android:text="6 Desember 2021"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:onClick="btnCreate"
                        android:id="@+id/btnPlus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/light_blue"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/tambah"/>

                </LinearLayout>

                <CalendarView
                    android:id="@+id/cvCalender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/llTanggal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvTodayEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Today's Event"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clTanggal"/>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>